--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,11 +8,11 @@
     "import/resolver": {
       "typescript": {
         "alwaysTryTypes": true,
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+        "extensions": [".ts", ".tsx"]
       }
     },
     "import/parsers": {
-      "@typescript-eslint/parser": [".js", ".jsx", ".ts", ".tsx"]
+      "@typescript-eslint/parser": [".ts", ".tsx"]
     }
   },
   "plugins": ["@typescript-eslint", "import"],
