--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "woff",
     "woff2"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dante-darie/iconfontlib.git"
+  },
   "license": "MIT",
   "author": {
     "name": "Dante Darie",
     "email": "dante.darie@gmail.com"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
@@ -26,8 +27,15 @@
       "import": "./dist/esm/index.js"
     }
   },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "scripts": {
-    "build": "npx tsc -p tsconfig.cjs.json && npx tsc -p tsconfig.esm.json && npx tsc -p tsconfig.types.json",
+    "build": "npm run clean && npm run build:cjs && npm run build:esm && npm run build:types",
+    "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
+    "build:cjs": "npx tsc -p tsconfig.cjs.json && npx tsc-alias -p tsconfig.cjs.json",
+    "build:esm": "npx tsc -p tsconfig.esm.json && npx tsc-alias -p tsconfig.esm.json",
+    "build:types": "npx tsc -p tsconfig.types.json && npx tsc-alias -p tsconfig.types.json",
     "lint": "npx eslint ./src --ext .ts",
     "lint:fix": "npx eslint ./src --ext .ts --fix",
     "prepare": "husky",
@@ -38,10 +46,14 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0",
-    "geometric-library": "file:../geometric-library",
+    "geometric-library": "^1.5.0",
     "opentype.js": "^1.3.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.4.1",
+    "@commitlint/config-conventional": "^20.4.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@types/node": "^20.14.2",
     "@types/opentype.js": "^1.3.8",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
@@ -56,6 +68,8 @@
     "prettier": "^3.3.2",
     "prettier-eslint": "^16.3.0",
     "prettier-plugin-packagejson": "^2.5.0",
+    "semantic-release": "^25.0.3",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
