--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "url": "https://github.com/dante-darie/iconfontlibrary.git"
   },
   "license": "MIT",
-  "publishConfig": {
-    "access": "public"
-  },
   "author": {
     "name": "Dante Darie",
     "email": "dante.darie@gmail.com"
@@ -50,6 +47,7 @@
   "dependencies": {
     "cheerio": "^1.0.0",
     "geometric-library": "^1.5.0",
+    "handlebars": "^4.7.8",
     "opentype.js": "^1.3.4"
   },
   "devDependencies": {
@@ -61,7 +59,7 @@
     "@types/opentype.js": "^1.3.8",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
-    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
@@ -75,6 +73,9 @@
     "tsc-alias": "^1.8.16",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "vitest": "^4.0.18"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
