--- a/package.json
+++ b/package.json
@@ -25,6 +25,26 @@
       "types": "./dist/types/index.d.ts",
       "require": "./dist/cjs/index.js",
       "import": "./dist/esm/index.js"
+    },
+    "./vite": {
+      "types": "./dist/types/plugins.d.ts",
+      "require": "./dist/cjs/plugins.js",
+      "import": "./dist/esm/plugins.js"
+    },
+    "./webpack": {
+      "types": "./dist/types/plugins.d.ts",
+      "require": "./dist/cjs/plugins.js",
+      "import": "./dist/esm/plugins.js"
+    },
+    "./rollup": {
+      "types": "./dist/types/plugins.d.ts",
+      "require": "./dist/cjs/plugins.js",
+      "import": "./dist/esm/plugins.js"
+    },
+    "./esbuild": {
+      "types": "./dist/types/plugins.d.ts",
+      "require": "./dist/cjs/plugins.js",
+      "import": "./dist/esm/plugins.js"
     }
   },
   "main": "dist/cjs/index.js",
@@ -48,7 +68,8 @@
     "cheerio": "^1.0.0",
     "geometric-library": "^1.5.0",
     "handlebars": "^4.7.8",
-    "opentype.js": "^1.3.4"
+    "opentype.js": "^1.3.4",
+    "unplugin": "^3.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.4.1",
