--- a/package.json
+++ b/package.json
@@ -23,37 +23,15 @@
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
-      "require": "./dist/cjs/index.js",
-      "import": "./dist/esm/index.js"
-    },
-    "./vite": {
-      "types": "./dist/types/plugins.d.ts",
-      "require": "./dist/cjs/plugins.js",
-      "import": "./dist/esm/plugins.js"
-    },
-    "./webpack": {
-      "types": "./dist/types/plugins.d.ts",
-      "require": "./dist/cjs/plugins.js",
-      "import": "./dist/esm/plugins.js"
-    },
-    "./rollup": {
-      "types": "./dist/types/plugins.d.ts",
-      "require": "./dist/cjs/plugins.js",
-      "import": "./dist/esm/plugins.js"
-    },
-    "./esbuild": {
-      "types": "./dist/types/plugins.d.ts",
-      "require": "./dist/cjs/plugins.js",
-      "import": "./dist/esm/plugins.js"
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
     }
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "types": "dist/types/index.d.ts",
   "scripts": {
-    "build": "npm run clean && npm run build:cjs && npm run build:esm && npm run build:types",
-    "build:cjs": "npx tsc -p tsconfig.cjs.json && npx tsc-alias -p tsconfig.cjs.json",
-    "build:esm": "npx tsc -p tsconfig.esm.json && npx tsc-alias -p tsconfig.esm.json",
+    "build": "npm run clean && vite build && npm run build:types",
     "build:types": "npx tsc -p tsconfig.types.json && npx tsc-alias -p tsconfig.types.json",
     "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
     "lint": "npx eslint ./src --ext .ts",
@@ -81,6 +59,7 @@
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "@vitest/coverage-v8": "^4.0.18",
+    "@yoichiro/vite-plugin-handlebars": "^1.4.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
